src/css/styles.scss
body {
  font-family: "Basis Grotesque", "Helvetica", sans-serif;
  color: #0f1433;
  font-size: 16px;
  line-height: 150%;
  background-color: #e0deff7c;

  @media (min-width: 768px) {
    font-size: 18px;
  }
}

/* scrollbar */
::-webkit-scrollbar {
  width: 0px;
}

/* Track */
::-webkit-scrollbar-track {
  background: transparent;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #e0deff36;
  border-radius: 25px;
}

a {
  color: #0f1433;
  text-decoration: none;
  transition: 0.5s;

  &:hover {
    cursor: crosshair;
    color: #4c47a0;
  }
}

h1 {
  font-weight: normal;
  color: #0f1433;
  font-family: "Tiempos Fine", "Playfair Display", serif;

  .mobile-only {
    display: block;
    padding-right: 8px;

    @media (min-width: 425px) {
      display: inline-block;
    }
  }

  &.title {
    text-transform: none;
    transition: 0.5s;
    text-align: left;
    margin: 20px 0 10px 0;
    font-size: 36px;
    line-height: 110%;

    @media (min-width: 768px) {
      text-transform: none;
      transition: 0.5s;
      font-size: 42px;
    }

    &:hover {
      color: #4c47a0;
    }
  }
}

h2 {
  color: #0f1433;
  font-family: "Tiempos Fine", "Playfair Display", serif;
  font-weight: normal;
  font-size: 25px;
  line-height: 140%;
  padding: 0;
  margin: 0px;

  @media (min-width: 768px) {
    font-size: 32px;
  }

  &.label {
    padding-bottom: 20px;
    width: 200px;
    display: block;
  }
}

h3 {
  font-family: "Roboto Mono", monospace;
  color: #4c47a0;
  font-weight: normal;
  text-transform: uppercase;
  font-size: 16px;

  &:link {
    background-color: transparent;
  }

  &.featured {
    margin: 0;
    padding: 0 0 15px 0;
  }
}

/* Navbar and Title */
.navigation {
  display: flex;
  flex-direction: row;

  .nav {
    font-family: "Roboto Mono", monospace;
    font-size: 18px;
    font-weight: normal;
    color: #0f1433;
    text-transform: uppercase;
    display: block;
    transition: 0.5s;
    margin: 5px 0 5px 0;

    &:hover {
      color: #4c47a0;
      text-decoration: none;
      border-bottom: none;
    }

    &:after {
      content: "";
      border-bottom: 0.5px solid #4c47a0;
      display: block;
      width: 100%;
      height: 1px;
      background: #4c47a0;
      transform: scaleX(1);
      transition: transform 0.3s ease-in-out;
      transform-origin: 0% 50%;
    }

    &:hover:after,
    &:focus:after,
    &:active:after {
      transform: scaleX(0);
      transform-origin: 100% 50% 0;
      width: 100%;
    }
  }
}

/* Projects */
.projTitle {
  font-size: 42px;
  text-transform: uppercase;
  font-style: italic;
  margin: 25px 25px 0 0;
  color: #0f1433;

  @media (min-width: 768px) {
    font-size: 60px;
  }
}

.project-box {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: flex-start;
  flex-wrap: wrap;
  padding: 0 0 25px 0;

  @media (min-width: 768px) {
    flex-direction: row;
  }

  .active {
    width: 99%;
    margin: 5px;
    box-shadow: 0 0 15px #e0deff;

    @media (min-width: 768px) {
      width: 45%;
    }
  }
}

.view-box {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: flex-start;
  padding-bottom: 25px;
}

.heroProj {
  text-align: center;

  .active {
    width: 99%;
    margin: 5px;

    @media (min-width: 768px) {
      width: 60%;
    }
  }

  .techIcon {
    width: 50px;
    height: 35px;
    padding: 0 10px 0 0;

    @media (min-width: 768px) {
      width: 35px;
    }
  }
}

.projList {
  display: block;
}

.techIcon {
  width: 35px;
  height: 35px;
  padding: 0 10px 0 0;
}

/* Projects Title */
.snippet {
  width: 90%;
  padding: 0 25px 0 25px;

  @media (min-width: 768px) {
    width: 100%;
  }

  h4 {
    font-size: 21px;
    font-style: italic;
    font-weight: normal;
    font-family: "Tiempos Fine", "Playfair Display", serif;
    margin: 0;
    padding: 0;
    text-align: center;
    line-height: 130%;
    color: #4c47a0;

    @media (min-width: 768px) {
      font-size: 27px;
      text-align: left;
    }
  }
}

/* Gradients */
.greenCircle {
  width: 300px;
  height: 300px;
  background-color: #e5ef53;
  position: absolute;
  bottom: 0;
  left: 0;
  border-radius: 50%;
  z-index: -1;
  opacity: 1;
  filter: blur(200px);

  animation-name: greenCircle;
  animation-duration: 8s;
  animation-iteration-count: infinite;
  animation-direction: alternate;

  @media (min-width: 768px) {
    width: 500px;
    height: 500px;
    opacity: 0.75;
  }
}

@keyframes greenCircle {
  0% {
    left: 18%;
    bottom: 10%;
  }

  50% {
    left: 22%;
    bottom: 44%;
  }

  100% {
    left: 62%;
    bottom: 82%;
  }
}

.videoWrapper {
  position: relative;
  padding-bottom: 56.25%;
  margin: 25px 0 50px 0;

  iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    box-shadow: 0 0 15px #e0deff;
  }
}

.about-snippet {
  h1 {
    font-size: 18.5px;
    padding: 15px 0 25px 0;
    font-style: italic;
    line-height: 150%;

    @media (min-width: 768px) {
      font-size: 25px;
    }
  }
}

